--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,16 +1,16 @@
 <h1>Players</h1>
 
-<table>
-  <thead>
+<table class='table'>
+  <thead class='thead-dark'>
     <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
+      <th scope='col'>Name</th>
+      <th scope='col' colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @players.each do |player| %>
-      <tr>
+      <tr scope='row'>
         <td><%= player.name %></td>
         <td><%= link_to 'Show', player %></td>
         <td><%= link_to 'Edit', edit_player_path(player) %></td>
