--- a/app/views/tournament_logs/show.html.erb
+++ b/app/views/tournament_logs/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Player:</strong>
-  <%= @tournament_log.player.name %>
+  <%= link_to @tournament_log.player.name, @tournament_log.player %>
 </p>
 
 <p>
