--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,7 +1,22 @@
-<p>
-  <strong>Name:</strong>
-  <%= @player.name %>
-</p>
+<h1>Player Profile: <%= @player.name.upcase %></h1>
+
+<h3>Tournament Logs</h3>
+<table class='table'>
+  <thead class='thead-dark'>
+    <tr>
+      <th scope='col'>Player</th>
+      <th scope='col'>Points</th>
+      <th scope='col'>Date</th>
+      <th scope='col' colspan="2"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @tournament_logs.sort_by{ |tl| [tl.date, tl.points] }.reverse.each do |tournament_log| %>
+      <%= render partial: '/tournament_logs/log_row', locals: { tournament_log: tournament_log } %>
+    <% end %>
+  </tbody>
+</table>
 
 <%= link_to 'Edit', edit_player_path(@player) %> |
 <%= link_to 'Back', players_path %>
