--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,9 +16,9 @@
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
-      <li class="nav-item">
-        <%= link_to "Sign Up", new_user_registration_path %>
-      </li>
+      <!-- <li class="nav-item">
+        < %= link_to "Sign Up", new_user_registration_path %>
+      </li> -->
       <li class="nav-item">
         <%= link_to "Sign In", new_user_session_path %>
       </li>
