--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<% if user_signed_in? %>
+
+<% else %>
+  <div class="jumbotron">
+    <h1 class="display-4">Rival Stars Tracker</h1>
+    <p class="lead">This is a simple stat tracking app for the Rival Stars game app.</p>
+    <hr class="my-4">
+    <p>Currently in a closed alpha state.</p>
+    <p class="lead">
+      <!-- < %= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary", disabled: true %> -->
+    </p>
+  </div>
+<% end %>
