--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,9 @@
           </div>
         <% end %>
       </div>
-      <%= yield %>
+      <div class="content-container">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
